<resources>
    <string name="app_name">Cronicalia</string>

    <!--f_my_books strings-->
    <string name="simple_number_integer">%1$d</string>
    <string name="simple_number_float">%1$.1f</string>
    <string name="income_amount">%1$.2f</string>
    <string name="mark_book_as_completed">Book is finished</string>
    <string name="mark_book_as_incomplete">Still have chapter to launch</string>
    <string name="cover_updated">Cover updated</string>
    <string name="cover_update_fail">Cover update failed</string>
    <string name="poster_updated">Poster updated</string>
    <string name="poster_update_fail">Poster update failed</string>
    <string name="remove">Remove</string>
    <string name="change">Change</string>
    <string name="one_file_selected_warning">There must be at least one file selectedBookFragment</string>
    <string name="save_file_changes">Save Files Changes</string>
    <string name="book_updated">Book Updated</string>
    <string name="update_fail">Update failed. Try again</string>
    <string name="add_chapter">Add Chapter</string>
    <string name="delete_book">Delete Book</string>
    <string name="delete">Delete</string>
    <string name="delete_book_dialog_title">Delete this book?</string>
    <string name="delete_book_dialog_message">Deleting this book will erase all reviews and comments immediately</string>
    <string name="book_deleted">Book Deleted</string>
    <string name="change_cover">Change Cover</string>
    <string name="change_poster">Change Poster</string>
    <string name="success">Success!</string>
    <string name="fail">Oh no!</string>
    <string name="info">Hey, ninja!</string>

    <!--f_create_book strings -->
    <string name="edition_successful">Files saved</string>
    <string name="editing_book">Saving file modifications. Hold up</string>
    <string name="creating_book">Creating you masterpiece. Hold up</string>
    <string name="create_new_book">Create new book</string>
    <string name="book_is_complete">Book is complete</string>
    <string name="book_title">Book Title</string>
    <string name="book_synopsis">Book Synopsis</string>
    <string name="launch_a_book">Launch full book</string>
    <string name="launch_by_chapter">Launch by chapter</string>
    <string name="resource_error">An error occurred. Try again</string>
    <string name="cover">Cover</string>
    <string name="poster">Poster</string>
    <string name="profile">Profile</string>
    <string name="select_book_file">Select book file</string>
    <string name="select_chapters_files">Select chapters files</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="chapter_number_hint">Chapter #%1$d title</string>
    <string name="error_title_blank">Title can not be blank</string>
    <string name="confirm">Confirm</string>
    <string name="invalid_text_detected">Invalid text detected</string>
    <string name="launch_frequency">Launch Frequency</string>
    <string name="genre">Genre</string>
    <string name="language">Language</string>
    <string name="action">action</string>
    <string name="english">english</string>
    <string name="progress_dialog_title">Creating book</string>
    <string name="progress_updating_book">Updating book</string>
    <string name="progress_dialog_fail">Error detected. Try again</string>
    <string name="check_internet_connection">Upload failed. No internet connection</string>
    <string name="background">Background</string>
    <string name="book_created">Book created</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="chapter_number">%1$d chapter(s)</string>
    <string name="opinions">Opinions</string>
    <string name="edit">Edit</string>

    <plurals name="on_schedule_notice">
        <item quantity="zero">According to your plans, you should upload a new chapter in less than a day</item>
        <item quantity="one">According to your plans, you should upload a new chapter tomorrow</item>
        <item quantity="other">According to your plans, you should upload a new chapter in %1$d days</item>
    </plurals>
    <string name="behind_on_schedule_notice">You are behind on schedule. Add a new chapter and make your fans happy</string>

    <plurals name="chapter_number">
        <item quantity="zero">0 chapters</item>
        <item quantity="one">%1$d chapter</item>
        <item quantity="other">%1$d chapters</item>
    </plurals>

    <string-array name="genre_array">
        <item>Action</item>
        <item>Fiction</item>
        <item>Romance</item>
        <item>Comedy</item>
        <item>Drama</item>
        <item>Horror</item>
        <item>Satire</item>
        <item>Fantasy</item>
        <item>Mythology</item>
        <item>Adventure</item>
    </string-array>

    <string-array name="language_array">
        <item>English</item>
        <item>Portuguese</item>
        <item>German</item>
    </string-array>

    <string-array name="periodicity_array">
        <item>Every day</item>
        <item>Every 3 days</item>
        <item>Every week</item>
        <item>Every two weeks</item>
        <item>Every month</item>
        <item>Every six weeks</item>
    </string-array>

    <string-array name="launch_description_array">
        <item>I\'m gonna launch a(n) %1$s book written in %2$s</item>
        <item>I\'m gonna launch an incomplete %1$s book written in %2$s. I intend to post a new chapter every day</item>
        <item>I\'m gonna launch an incomplete %1$s book written in %2$s. I intend to post a new chapter every %3$d days</item>
    </string-array>

    <!--c_featured_books strings-->
    <string name="starred">Starred</string>
    <string name="search">Search</string>
    <string name="my_books">My Books</string>
    <string name="collection">Collection</string>
    <string name="account">Account</string>
    <string name="publication_date">Publication \u0020 %1$s</string>

    <!--g_manage_account strings-->
    <string name="background_image">Background Image</string>
    <string name="profile_image">Profile Image</string>
    <string name="user_name">User Name</string>
    <string name="about_me">About Me</string>
    <string name="twitter_profile">Twitter Profile</string>
    <string name="updating_image">Updating Image</string>
    <string name="update_begin_once_internet_available">Update will begin once you connect to the internet</string>
    <string name="image_upload_successful">Image update complete</string>
    <string name="image_upload_failed">Image update failed. Try again.</string>
    <string name="about_me_instructions">Click and tell your readers who are you</string>
    <string name="twitter_profile_instructions">Click and add your twitter profile</string>
    <string name="image_invalid">Image invalid. Please try another one</string>

    <!-- Login Strings -->
    <string name="facebook_application_id" translatable="false">284060812125351</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb284060812125351</string>
    <string name="twitter_consumer_key" translatable="false">fpDn5XBXVUFB70OrjyTd18dGH</string>
    <string name="twitter_consumer_secret" translatable="false">B7Fm3xNb9vvEXBq751kAirESQyOVLapdHpsEH6Jeo7zBWAm0gr</string>
    <string name="no_network">You are not connected to the internet. Changes won\'t be saved</string>
    <string name="unknown_error">Something went wrong. Try again</string>

</resources>
