<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/horizontal_scroll_indicator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/book_cover_image_view"
        android:layout_width="135dp"
        android:layout_height="180dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/cover_placeholder"/>

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_content_screen"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintBottom_toTopOf="@id/edit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/book_cover_image_view"
        app:layout_constraintVertical_bias="1.0"/>

    <ImageView
        android:id="@+id/readings_image_view"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_eye_24dp"
        android:tint="@color/text_tertiary"
        app:layout_constraintBottom_toTopOf="@+id/publication_date_text_view"
        app:layout_constraintStart_toStartOf="@+id/view2"/>

    <TextView
        android:id="@+id/readings_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textColor="@color/text_tertiary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/readings_image_view"
        app:layout_constraintStart_toEndOf="@+id/readings_image_view"
        app:layout_constraintTop_toTopOf="@+id/readings_image_view"
        tools:text="10k"/>

    <ImageView
        android:id="@+id/rating_image_view"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_star_24dp"
        android:tint="@color/text_tertiary"
        app:layout_constraintEnd_toStartOf="@+id/income_image_view"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toEndOf="@+id/readings_image_view"
        app:layout_constraintTop_toTopOf="@+id/readings_image_view"/>

    <TextView
        android:id="@+id/rating_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/text_tertiary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/rating_image_view"
        app:layout_constraintStart_toEndOf="@+id/rating_image_view"
        app:layout_constraintTop_toTopOf="@+id/rating_image_view"
        tools:text="9.5"/>

    <ImageView
        android:id="@+id/income_image_view"
        android:layout_width="22dp"
        android:layout_height="24dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ic_money_24dp"
        android:tint="@color/text_tertiary"
        app:layout_constraintEnd_toStartOf="@+id/income_text_view"
        app:layout_constraintTop_toTopOf="@+id/readings_image_view"/>

    <TextView
        android:id="@+id/income_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="@color/text_tertiary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/income_image_view"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/income_image_view"
        tools:text="$500"/>

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/text_primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        tools:text="Makr"/>

    <TextView
        android:id="@+id/synopsis_text_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textColor="@color/text_secondary"
        app:layout_constraintBottom_toTopOf="@+id/readings_image_view"
        app:layout_constraintEnd_toEndOf="@+id/title_text_view"
        app:layout_constraintStart_toStartOf="@+id/title_text_view"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view"/>

    <TextView
        android:id="@+id/book_status_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/text_tertiary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_goneMarginTop="16dp"
        tools:text="Book is complete"/>

    <TextView
        android:id="@+id/publication_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/book_status_text_view"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        tools:text="@string/publication_date"/>

    <Button
        android:id="@+id/edit_button"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/edit"
        android:textColor="@color/text_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/view_opinions_button"
        style="@android:style/Widget.Material.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/shape_button_outline"
        android:padding="8dp"
        android:text="@string/opinions"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_button"/>

</android.support.constraint.ConstraintLayout>
